# simple_streamlit_agent

./: LICENSE  README.md  app.py  ingest.py  intelligent_chunking.csv  logs.py  main.py  pyproject.toml  requirements.txt  search_agent.py  search_tools.py
