[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "minsearch>=0.0.10",
    "numpy>=2.4.3",
    "openai>=2.29.0",
    "pandas>=1.3.0,<4",
    "pydantic-ai>=1.72.0",
    "python-frontmatter>=1.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.28.0",
]
